2008-06-21  Mitchell Wheeler <mitchell.wheeler@gmail.com>

	* Gui/EditPackagesDialog.cs: Re-check if there is a selected
	  package before setting the package details button to sensitive
	  on tab/page change.
	  Fixes new steps to reproduce the bug 398789.

2008-06-10  Marcos David Marín Amador <marcosmarin@gmail.com>

	* Gui/EditPackagesDialog.cs: Check if there is a selected package
	  before setting the package details button to sensitive.
	  Fixes bug 398789.

2008-06-04  Marcos David Marín Amador <marcosmarin@gmail.com>

	* Gui/GeneralOptionsPanel.cs, Parser/TagDatabaseManager.cs: Don't
	  parse local valriables by default.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: The configuration parameter of GetDeployFiles is
	  a solution configuration, so it needs to get the mapped project
	  configuration name. Track some api changes.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Bump MD version.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: Properly set debug mode when creating a project.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs, md1format.xml, CBinding.addin.xml,
	  CBinding.mdp, Project/CProjectConfiguration.cs,
	  Project/CCompilationParameters.cs, Project/CProject.cs,
	  Makefile.am, Compiler/GNUCompiler.cs: Removed
	  CCompilationParameters because it is not really needed like in the
	  .net case. Also changed the name used to serialize some properties,
	  to better match the msbuild model. Added a serialization map
	  (md1format.xml) for backwards compatibility with the old mdp
	  format.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: BaseDirectory can't be used until the project
	  has been saved. Fixes bug 393945 - Can not create new C Binding
	  project.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Merged the extension points for project and