@@ -1,3 +1,10 @@
+2008-06-22  Andrés G. Aragoneses <aaragoneses@novell.com> 
+
+	* Gui/EditPackagesDialog.cs: Change the way of distinguishing tabs not
+	  to rely on strings that may be translated.
+	* gtk-gui/CBinding.EditPackagesDialog.cs, gtk-gui/gui.stetic: Use
+	  custom label names.
+
 2008-06-21  Mitchell Wheeler <mitchell.wheeler@gmail.com>
 
 	* Gui/EditPackagesDialog.cs: Re-check if there is a selected
